// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/atomic-component-health-check @coveo/create-atomic-component should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "nWfWoKZyt66mjD4DiTJ9My2JYLk=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "KemKxsZLHiHNylz5a6Z2IK7PwBw=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "mSEayrhdQLFyjWOgicX78wD8seE=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "TLrPzQ215bJQgHPDj+8uidPXAqo=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "MdfhPw3BWNSYK2+cqb5JCBKTSpI=",
              "name": "valid-component-name",
            },
          ],
          "hash": "QXq8wEsNM1ZMS7Ou+h2wmWBghhs=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "xRG1Nufl9fjocyirZh0onW5WXDE=",
          "name": "pages",
        },
      ],
      "hash": "3c1D5j9oFMnq4G+TvHiuRPy9DbU=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "3L99yZtdQfzHlVfhMGMSXHa1iBQ=",
  "name": "create-atomic-component",
}
`;

exports[`@coveo/atomic-component-health-check @coveo/create-atomic-result-component should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "nWfWoKZyt66mjD4DiTJ9My2JYLk=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "NMHnNJYUQzGCOq3aSmWl3tNp4fI=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "evmFecMLmIelFBXZvhawgWv8oWg=",
              "name": "valid-component-name",
            },
          ],
          "hash": "TcERGSTeYN1rbMN/FyAlrUBM5QU=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "xRG1Nufl9fjocyirZh0onW5WXDE=",
          "name": "pages",
        },
      ],
      "hash": "O1z5b12aljXFWbAgYns/8R1JuaY=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "nE12QUKs+Te2JNKTXiL8IYtXWQw=",
  "name": "create-atomic-result-component",
}
`;
